opam-version: "2.0"
name: "httpun-ws-async"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Antonio N. Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/httpun-ws"
bug-reports: "https://github.com/anmonteiro/httpun-ws/issues"
dev-repo: "git+https://github.com/anmonteiro/httpun-ws.git"
build: [
  ["jbuilder" "subst" "-p" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "httpun-ws"
  "dune"
  "faraday-async"
  "async" {>= "v0.15.0"}
  "gluten-async"
  "digestif"
  "base64"
]
synopsis: "Async support for websocket/af"
