opam-version: "2.0"
name: "httpun-ws-lwt-unix"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Andreas Garnæs <andreas.garnaes@gmail.com>"
           "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/httpun-ws"
bug-reports: "https://github.com/anmonteiro/httpun-ws/issues"
dev-repo: "git+https://github.com/anmonteiro/httpun-ws.git"
build: [
  ["dune" "subst" "-p" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "faraday-lwt-unix"
  "httpun-ws"
  "httpun-ws-lwt"
  "dune" {build}
  "lwt"
  "gluten-lwt-unix" {>= "0.2.0"}
]
synopsis: "Lwt support for websocket/af"
