opam-version: "2.0"
name: "httpun-ws-mirage"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
           "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/httpun-ws"
bug-reports: "https://github.com/anmonteiro/httpun-ws/issues"
dev-repo: "git+https://github.com/anmonteiro/httpun-ws.git"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "faraday-lwt"
  "httpun-ws"
  "httpun-ws-lwt"
  "conduit-mirage" {>= "2.0.2"}
  "mirage-flow" {>= "2.0.0"}
  "cstruct"
  "dune"
  "lwt"
]
synopsis: "Mirage support for httpun-ws"
