opam-version: "2.0"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [
  "Spiros Eliopoulos <spiros@inhabitedtype.com>"
  "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/httpun-ws"
bug-reports: "https://github.com/anmonteiro/httpun-ws/issues"
dev-repo: "git+https://github.com/anmonteiro/httpun-ws.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "base64"   {>= "3.0.0"}
  "alcotest" {with-test}
  "bigstringaf"
  "angstrom" {>= "0.14.0"}
  "faraday"  {>= "0.5.0"}
  "gluten" {>= "0.2.0"}
  "httpun"
  "result"
]
synopsis:
  "Websocket implementation for use with http/af"
