opam-version: "2.0"
name: "websocketaf-lwt"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Andreas Garnæs <andreas.garnaes@gmail.com>"
           "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/websocketaf"
bug-reports: "https://github.com/inhabitedtype/websocketaf/issues"
dev-repo: "git+https://github.com/inhabitedtype/websocketaf.git"
build: [
  ["dune" "subst" "-p" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "faraday-lwt-unix"
  "websocketaf"
  "dune" {build}
  "lwt"
  "digestif"
  "gluten-lwt" {>= "0.2.0"}
]
pin-depends: [
  [ "httpaf.dev" "git+https://github.com/anmonteiro/httpaf.git#fork" ]
  [ "httpaf-lwt.dev" "git+https://github.com/anmonteiro/httpaf.git#fork" ]
  [ "websocketaf.dev" "git+https://github.com/anmonteiro/websocketaf.git#fork" ]
]
synopsis: "Lwt support for websocket/af"
