opam-version: "2.0"
name: "websocketaf-mirage"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
           "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/websocketaf"
bug-reports: "https://github.com/inhabitedtype/websocketaf/issues"
dev-repo: "git+https://github.com/inhabitedtype/websocketaf.git"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "faraday-lwt"
  "websocketaf"
  "websocketaf-lwt"
  "conduit-mirage" {>= "2.0.2"}
  "mirage-flow" {>= "2.0.0"}
  "cstruct"
  "dune"
  "lwt"
]
pin-depends: [
  [ "httpaf.dev" "git+https://github.com/anmonteiro/httpaf.git#fork" ]
  [ "httpaf-lwt.dev" "git+https://github.com/anmonteiro/httpaf.git#fork" ]
]
synopsis: "Mirage support for websocket/af"
